--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form>
+		<label for="name">Name</label>
+		<input type="text" id="name" minlength="3" maxlength="50" required/>
+		<label for="portfolio">portfolio</label>
+		<input type="url" id="portfolio" required/>
+		<label for="favColor">favColor</label>
+		<input type="color" id="favColor"/>
+		<label for="likeness">likeness</label>
+		<input type="number" id="likeness" min="1" max="100"/>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
