--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
-	<form>
+	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" minlength="3" maxlength="50" required/>
 		<label for="portfolio">portfolio</label>
@@ -17,7 +17,7 @@
 		<label for="favColor">favColor</label>
 		<input type="color" id="favColor"/>
 		<label for="likeness">likeness</label>
-		<input type="number" id="likeness" min="1" max="100"/>
+		<input type="range" id="likeness" min="1" max="100"/>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
